# AWS-Instance-Lister

./: custodian.yml  db.sqlite3  log_test_output.txt  log_test_views.txt  manage.py  pyproject.toml  requirements.txt
awsProj/: asgi.py
aws_proj/: .editorconfig  .gitignore  CONTRIBUTORS.txt  LICENSE  README.rst  asgi.py  manage.py  settings.py  setup.cfg  urls.py  wsgi.py
aws_proj/aws_proj/: conftest.py  db.sqlite3
aws_proj/aws_proj/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
aws_proj/aws_proj/templates/: base.html
aws_proj/aws_proj/templates/pages/: instance_temp.html
aws_proj/aws_proj/users/: admin.py  apps.py  models.py  urls.py
aws_proj/aws_proj/users/tests/: test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
aws_proj/config/: urls.py  wsgi.py
aws_proj/config/settings/: base.py  local.py  production.py  test.py
aws_proj/docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
aws_proj/instance_component/: apps.py  models.py  views.py
aws_proj/instance_component/migrations/: 0001_initial.py
aws_proj/instance_component/tests/: test_views.py
aws_proj/requirements/: requirements.txt
djangoArmor/: Pipfile  manage.py
djangoArmor/awsProj/: settings.py  urls.py  wsgi.py
djangoArmor/instanceComponent/: apps.py
djangoArmor/templates/: instanceTemp.html
instanceComponent/: models.py  views.py
instanceComponent/migrations/: 0001_initial.py
instance_component/: apps.py  views.py
instance_component/tests/: test_views.py
templates/: instanceTemp.html
