[tool.poetry]
name = "djangoarmor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argcomplete = "1.12.2"
asgiref = "3.3.4"
attrs = "20.3.0"
boto3 = "1.17.33"
botocore = "1.20.33"
c7n = "0.9.11"
Django = "3.2.4"
importlib-metadata = "3.7.3"
jmespath = "0.10.0"
jsonpickle = "1.3"
jsonschema = "3.2.0"
pyrsistent = "0.17.3"
python-dateutil = "2.8.1"
pytz = "2021.1"
PyYAML = "5.4.1"
s3transfer = "0.3.6"
six = "1.15.0"
sqlparse = "0.4.1"
tabulate = "0.8.9"
typing-extensions = "3.7.4.3"
urllib3 = "1.26.4"
zipp = "3.4.1"
arrow = "1.1.0"
binaryornot = "0.4.4"
certifi = "2021.5.30"
cffi = "1.14.5"
chardet = "4.0.0"
click = "8.0.1"
cookiecutter = "1.7.3"
cryptography = "3.4.7"
idna = "2.10"
iniconfig = "1.1.1"
Jinja2 = "3.0.1"
jinja2-time = "0.2.0"
MarkupSafe = "2.0.1"
more-itertools = "8.8.0"
moto = "2.0.9"
packaging = "20.9"
pluggy = "0.13.1"
poyo = "0.5.0"
py = "1.10.0"
pycparser = "2.20"
pyparsing = "2.4.7"
pytest = "6.2.4"
python-slugify = "5.0.2"
requests = "2.25.1"
responses = "0.13.3"
text-unidecode = "1.3"
toml = "0.10.2"
Werkzeug = "2.0.1"
xmltodict = "0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
