[tool.poetry]
name = "cc_django_armor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argcomplete = "1.12.2"
arrow = "1.1.0"
asgiref = "3.3.4"
attrs = "20.3.0"
binaryornot = "0.4.4"
boto3 = "1.17.33"
botocore = "^1.20.97"
certifi = "2021.5.30"
cffi = "1.14.5"
chardet = "4.0.0"
click = "8.0.1"
cookiecutter = "1.7.3"
cryptography = "3.4.7"
Django = "3.2.4"
idna = "2.10"
importlib-metadata = "3.7.3"
iniconfig = "1.1.1"
Jinja2 = "3.0.1"
jinja2-time = "0.2.0"
jmespath = "0.10.0"
jsonpickle = "1.3"
jsonschema = "3.2.0"
MarkupSafe = "2.0.1"
more-itertools = "8.8.0"
moto = "2.0.9"
packaging = "20.9"
pluggy = "0.13.1"
poyo = "0.5.0"
py = "1.10.0"
pycparser = "2.20"
pyparsing = "2.4.7"
pyrsistent = "0.17.3"
pytest = "6.2.4"
python-dateutil = "2.8.1"
python-slugify = "5.0.2"
pytz = "2021.1"
PyYAML = "5.4.1"
requests = "2.25.1"
responses = "0.13.3"
six = "^1.16.0"
sqlparse = "0.4.1"
tabulate = "0.8.9"
text-unidecode = "1.3"
toml = "0.10.2"
typing-extensions = "3.7.4.3"
urllib3 = "^1.26.5"
Werkzeug = "2.0.1"
xmltodict = "0.12.0"
zipp = "3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
